v2.1.6 （未发布）
新增特性
1、带约束的泛型支持（by forsakenyang）；
2、非Unity的.net环境支持；
3、代码注入支持小工具方式，该方式不用拷贝cecil库，可以解决拷错cecil库版本或者和Unity，VS插件冲突的问题；
4、Hotfix配置支持字段和属性
5、更方便的Unity协程hotfix
6、在hotfix触发事件；
7、LuaTable添加ForEach方法以及Length属性；
8、cmake生成项目优化：保留源文件目录结构；

变更
1、构造函数改为执行原有逻辑后调用lua；
2、对string类型的[]操作符重载会影响到继承调用，去掉该特性的支持；
3、编辑器下的代码注入改为手动方式；

bug修复
1、防止定义了同时定义get_xx方法以及xx属性的生成代码的重名。
2、struct注入代码无效；
3、Utils加名字空间，防止和业务冲突；
4、返回定长多维数组的delegate，生成代码可能会冲突；
5、interface，以及编辑器下不生成代码情况下，对可变参数的展开；
6、il2cpp下，如果不生成代码，会报ManifestModule不支持；
7、规避Unity4的bug：访问一个已经被Distroy的UnityEngine.Object，编辑器下会崩溃，这个问题在Unity5，或者luajit版本都不会出现；
8、修改上个版本引入的问题：xlua_setglobal会漏一个值在栈上，这会导致一些32位应用不稳定；

v2.1.5 2016年12月13日
新增特性
1、新增更简便的配置方式，具体参见XLua\Doc下《XLua的配置.doc》；
2、多虚拟机实例时的自动Dispose；
3、内存优化：减少匿名闭包到delegate映射的内存占用；减少LuaFunction以及LuaTable内存占用；减少lua table映射C#interface的gc；
4、生成代码速度优化；
5、支持直接在lua侧clone C#结构体；
6、LuaFunction新增无gc调用api；

变更
1、delegate必须都加[CSharpCallLua]才支持C#到lua的回调（以前参数和返回值都相同的delegate只要其中一个加了就可以）；

bug修复
1、枚举不生成代码时，第一次使用会产生两个不同的userdata；
2、数组和System.Type的相互引用导致System.Type生成代码无法加载；


v2.1.4 2016年11月29日
新增特性
1、加了ReflectionUse会自动生成到link.xml，可以防止il2cpp下因stripping导致的反射不可用；
2、开放生成引擎，可二次开发自己生成插件，生成所需的代码或配置；
3、GetInPath和SetInPath无C# gc优化；
4、一个lua table自动转换为带GCOptimize标签的复杂类型以及该复杂类型的一维数组不使用反射，如果这复杂类型是纯值类型，无c# gc；

变更
1、基于一致性以及性能的考虑，不支持数字和字符串到枚举的静默转换，须主动调用起类下的__CastFrom；
2、名字空间从LuaInterface改为XLua；
3、LuaTable的几个可能导致gc的api标注为Obsolete；
4、在不指明返回类型的情况下，如果一个number是整数会优先转换成整数；

bug修复
1、含能隐式转换int，long，decimal的类型传到lua变成decimal；
2、反射的重载判断，如果可变参数的位置上是一个不匹配的参数，也会判断为匹配成功；
3、可变参数+重载的话，可变部分不传会报无效参数；
4、加了LuaCallCSharp的Extension method，在Editor下不生成代码不可用；

v2.1.3 2016年11月09日
新增特性
1、LuaTable新增Get<TKey, TValue>和Set<TKey, TValue>接口，table操作支持值类型无gc；
2、支持decimal，不丢失精度而且传递到lua无gc；
3、增加LuaEnv.LoadString<T>接口，用于指定返回的delegate类型；
4、例子刷新：新增Helloworld，无GC调用，Lua面向对象，协程例子；
5、enum优化：传递到lua无gc，从int或者string到枚举转换无gc；
6、event的+/-优化：性能提升一倍，而且无gc；
7、生成代码简化；

变更
1、uint在lua53映射到lua_Integer；
2、StreamingAssets加载改为优先级最低；

bug修复