@@ -24,7 +24,19 @@ namespace XLua
 
     public class LuaEnv : IDisposable
     {
-        internal RealStatePtr L;
+        internal RealStatePtr rawL;
+
+        internal RealStatePtr L
+        {
+            get
+            {
+                if (rawL == RealStatePtr.Zero)
+                {
+                    throw new InvalidOperationException("this lua env had disposed!");
+                }
+                return rawL;
+            }
+        }
 
         private LuaTable _G;
 
@@ -52,30 +64,30 @@ namespace XLua
 #endif
                 LuaIndexes.LUA_REGISTRYINDEX = LuaAPI.xlua_get_registry_index(); ;
                 // Create State
-                L = LuaAPI.luaL_newstate();
+                rawL = LuaAPI.luaL_newstate();
 
                 //Init Base Libs
-                LuaAPI.luaopen_xlua(L);
-                LuaAPI.luaopen_i64lib(L);
-                LuaAPI.luaopen_perflib(L);
+                LuaAPI.luaopen_xlua(rawL);
+                LuaAPI.luaopen_i64lib(rawL);
+                LuaAPI.luaopen_perflib(rawL);
 
-                translator = new ObjectTranslator(this, L);
-                translator.createFunctionMetatable(L);
-                translator.OpenLib(L);
-                ObjectTranslatorPool.Instance.Add(L, translator);
+                translator = new ObjectTranslator(this, rawL);
+                translator.createFunctionMetatable(rawL);
+                translator.OpenLib(rawL);
+                ObjectTranslatorPool.Instance.Add(rawL, translator);
 
-                LuaAPI.lua_atpanic(L, StaticLuaCallbacks.Panic);
+                LuaAPI.lua_atpanic(rawL, StaticLuaCallbacks.Panic);
 
 #if !XLUA_GENERAL
-                LuaAPI.lua_pushstdcallcfunction(L, StaticLuaCallbacks.Print);
-                if (0 != LuaAPI.xlua_setglobal(L, "print"))
+                LuaAPI.lua_pushstdcallcfunction(rawL, StaticLuaCallbacks.Print);
+                if (0 != LuaAPI.xlua_setglobal(rawL, "print"))
                 {
                     throw new Exception("call xlua_setglobal fail!");
                 }
 #endif
 
                 //template engine lib register
-                TemplateEngine.LuaTemplate.OpenLib(L);
+                TemplateEngine.LuaTemplate.OpenLib(rawL);
 
                 AddSearcher(StaticLuaCallbacks.LoadBuiltinLib, 2); // just after the preload searcher
                 AddSearcher(StaticLuaCallbacks.LoadFromCustomLoaders, 3);
@@ -89,52 +101,52 @@ namespace XLua
                 AddBuildin("socket.core", StaticLuaCallbacks.LoadSocketCore);
                 AddBuildin("socket", StaticLuaCallbacks.LoadSocketCore);
 
-                LuaAPI.lua_newtable(L); //metatable of indexs and newindexs functions
-                LuaAPI.xlua_pushasciistring(L, "__index");
-                LuaAPI.lua_pushstdcallcfunction(L, StaticLuaCallbacks.MetaFuncIndex);
-                LuaAPI.lua_rawset(L, -3);
+                LuaAPI.lua_newtable(rawL); //metatable of indexs and newindexs functions
+                LuaAPI.xlua_pushasciistring(rawL, "__index");
+                LuaAPI.lua_pushstdcallcfunction(rawL, StaticLuaCallbacks.MetaFuncIndex);
+                LuaAPI.lua_rawset(rawL, -3);
 
-                LuaAPI.xlua_pushasciistring(L, Utils.LuaIndexsFieldName);
-                LuaAPI.lua_newtable(L);
-                LuaAPI.lua_pushvalue(L, -3);
-                LuaAPI.lua_setmetatable(L, -2);
-                LuaAPI.lua_rawset(L, LuaIndexes.LUA_REGISTRYINDEX);
+                LuaAPI.xlua_pushasciistring(rawL, Utils.LuaIndexsFieldName);
+                LuaAPI.lua_newtable(rawL);
+                LuaAPI.lua_pushvalue(rawL, -3);
+                LuaAPI.lua_setmetatable(rawL, -2);
+                LuaAPI.lua_rawset(rawL, LuaIndexes.LUA_REGISTRYINDEX);
 
-                LuaAPI.xlua_pushasciistring(L, Utils.LuaNewIndexsFieldName);
-                LuaAPI.lua_newtable(L);
-                LuaAPI.lua_pushvalue(L, -3);
-                LuaAPI.lua_setmetatable(L, -2);
-                LuaAPI.lua_rawset(L, LuaIndexes.LUA_REGISTRYINDEX);
+                LuaAPI.xlua_pushasciistring(rawL, Utils.LuaNewIndexsFieldName);
+                LuaAPI.lua_newtable(rawL);
+                LuaAPI.lua_pushvalue(rawL, -3);
+                LuaAPI.lua_setmetatable(rawL, -2);
+                LuaAPI.lua_rawset(rawL, LuaIndexes.LUA_REGISTRYINDEX);
 
-                LuaAPI.xlua_pushasciistring(L, Utils.LuaClassIndexsFieldName);
-                LuaAPI.lua_newtable(L);
-                LuaAPI.lua_pushvalue(L, -3);
-                LuaAPI.lua_setmetatable(L, -2);
-                LuaAPI.lua_rawset(L, LuaIndexes.LUA_REGISTRYINDEX);
+                LuaAPI.xlua_pushasciistring(rawL, Utils.LuaClassIndexsFieldName);
+                LuaAPI.lua_newtable(rawL);
+                LuaAPI.lua_pushvalue(rawL, -3);
+                LuaAPI.lua_setmetatable(rawL, -2);
+                LuaAPI.lua_rawset(rawL, LuaIndexes.LUA_REGISTRYINDEX);
 
-                LuaAPI.xlua_pushasciistring(L, Utils.LuaClassNewIndexsFieldName);
-                LuaAPI.lua_newtable(L);
-                LuaAPI.lua_pushvalue(L, -3);
-                LuaAPI.lua_setmetatable(L, -2);
-                LuaAPI.lua_rawset(L, LuaIndexes.LUA_REGISTRYINDEX);
+                LuaAPI.xlua_pushasciistring(rawL, Utils.LuaClassNewIndexsFieldName);
+                LuaAPI.lua_newtable(rawL);
+                LuaAPI.lua_pushvalue(rawL, -3);
+                LuaAPI.lua_setmetatable(rawL, -2);
+                LuaAPI.lua_rawset(rawL, LuaIndexes.LUA_REGISTRYINDEX);
 
-                LuaAPI.lua_pop(L, 1); // pop metatable of indexs and newindexs functions
+                LuaAPI.lua_pop(rawL, 1); // pop metatable of indexs and newindexs functions
 
-                LuaAPI.xlua_pushasciistring(L, "xlua_main_thread");
-                LuaAPI.lua_pushthread(L);
-                LuaAPI.lua_rawset(L, LuaIndexes.LUA_REGISTRYINDEX);
+                LuaAPI.xlua_pushasciistring(rawL, "xlua_main_thread");
+                LuaAPI.lua_pushthread(rawL);
+                LuaAPI.lua_rawset(rawL, LuaIndexes.LUA_REGISTRYINDEX);
 #if !XLUA_GENERAL
                 translator.Alias(typeof(Type), "System.MonoType");
 #endif
 
-                if (0 != LuaAPI.xlua_getglobal(L, "_G"))
+                if (0 != LuaAPI.xlua_getglobal(rawL, "_G"))
                 {
                     throw new Exception("call xlua_getglobal fail!");
                 }
-                translator.Get(L, -1, out _G);
-                LuaAPI.lua_pop(L, 1);
+                translator.Get(rawL, -1, out _G);
+                LuaAPI.lua_pop(rawL, 1);
 
-                errorFuncRef = LuaAPI.get_error_func_ref(L);
+                errorFuncRef = LuaAPI.get_error_func_ref(rawL);
 
                 if (initers != null)
                 {
@@ -144,8 +156,8 @@ namespace XLua
                     }
                 }
 
-                translator.CreateArrayMetatable(L);
-                translator.CreateDelegateMetatable(L);
+                translator.CreateArrayMetatable(rawL);
+                translator.CreateDelegateMetatable(rawL);
 #if THREAD_SAFT || HOTFIX_ENABLE
             }
 #endif
@@ -180,20 +192,20 @@ namespace XLua
                 {
                     throw new InvalidOperationException(typeof(T).Name + " is not a delegate type nor LuaFunction");
                 }
+                var _L = L;
+                int oldTop = LuaAPI.lua_gettop(_L);
 
-                int oldTop = LuaAPI.lua_gettop(L);
-
-                if (LuaAPI.luaL_loadbuffer(L, chunk, chunkName) != 0)
+                if (LuaAPI.luaL_loadbuffer(_L, chunk, chunkName) != 0)
                     ThrowExceptionFromError(oldTop);
 
                 if (env != null)
                 {
-                    env.push(L);
-                    LuaAPI.lua_setfenv(L, -2);
+                    env.push(_L);
+                    LuaAPI.lua_setfenv(_L, -2);
                 }
 
-                T result = (T)translator.GetObject(L, -1, typeof(T));
-                LuaAPI.lua_settop(L, oldTop);
+                T result = (T)translator.GetObject(_L, -1, typeof(T));
+                LuaAPI.lua_settop(_L, oldTop);
 
                 return result;
 #if THREAD_SAFT || HOTFIX_ENABLE
@@ -212,20 +224,21 @@ namespace XLua
             lock (luaEnvLock)
             {
 #endif
-                int oldTop = LuaAPI.lua_gettop(L);
-                int errFunc = LuaAPI.load_error_func(L, errorFuncRef);
-                if (LuaAPI.luaL_loadbuffer(L, chunk, chunkName) == 0)
+                var _L = L;
+                int oldTop = LuaAPI.lua_gettop(_L);
+                int errFunc = LuaAPI.load_error_func(_L, errorFuncRef);
+                if (LuaAPI.luaL_loadbuffer(_L, chunk, chunkName) == 0)
                 {
                     if (env != null)
                     {
-                        env.push(L);
-                        LuaAPI.lua_setfenv(L, -2);
+                        env.push(_L);
+                        LuaAPI.lua_setfenv(_L, -2);
                     }
 
-                    if (LuaAPI.lua_pcall(L, 0, -1, errFunc) == 0)
+                    if (LuaAPI.lua_pcall(_L, 0, -1, errFunc) == 0)
                     {
-                        LuaAPI.lua_remove(L, errFunc);
-                        return translator.popValues(L, oldTop);
+                        LuaAPI.lua_remove(_L, errFunc);
+                        return translator.popValues(_L, oldTop);
                     }
                     else
                         ThrowExceptionFromError(oldTop);
@@ -245,22 +258,23 @@ namespace XLua
             lock (luaEnvLock)
             {
 #endif
+                var _L = L;
                 //insert the loader
-                LuaAPI.xlua_getloaders(L);
-                if (!LuaAPI.lua_istable(L, -1))
+                LuaAPI.xlua_getloaders(_L);
+                if (!LuaAPI.lua_istable(_L, -1))
                 {
                     throw new Exception("Can not set searcher!");
                 }
-                uint len = LuaAPI.xlua_objlen(L, -1);
+                uint len = LuaAPI.xlua_objlen(_L, -1);
                 index = index < 0 ? (int)(len + index + 2) : index;
                 for (int e = (int)len + 1; e > index; e--)
                 {
-                    LuaAPI.xlua_rawgeti(L, -1, e - 1);
-                    LuaAPI.xlua_rawseti(L, -2, e);
+                    LuaAPI.xlua_rawgeti(_L, -1, e - 1);
+                    LuaAPI.xlua_rawseti(_L, -2, e);
                 }
-                LuaAPI.lua_pushstdcallcfunction(L, searcher);
-                LuaAPI.xlua_rawseti(L, -2, index);
-                LuaAPI.lua_pop(L, 1);
+                LuaAPI.lua_pushstdcallcfunction(_L, searcher);
+                LuaAPI.xlua_rawseti(_L, -2, index);
+                LuaAPI.lua_pop(_L, 1);
 #if THREAD_SAFT || HOTFIX_ENABLE
             }
 #endif
@@ -290,12 +304,13 @@ namespace XLua
             lock (luaEnvLock)
             {
 #endif
+                var _L = L;
                 lock (refQueue)
                 {
                     while (refQueue.Count > 0)
                     {
                         GCAction gca = refQueue.Dequeue();
-                        translator.ReleaseLuaBase(L, gca.Reference, gca.IsDelegate);
+                        translator.ReleaseLuaBase(_L, gca.Reference, gca.IsDelegate);
                     }
                 }
 #if !XLUA_GENERAL
@@ -318,12 +333,13 @@ namespace XLua
             lock (luaEnvLock)
             {
 #endif
-                int oldTop = LuaAPI.lua_gettop(L);
+                var _L = L;
+                int oldTop = LuaAPI.lua_gettop(_L);
 
-                LuaAPI.lua_newtable(L);
-                LuaTable returnVal = (LuaTable)translator.GetObject(L, -1, typeof(LuaTable));
+                LuaAPI.lua_newtable(_L);
+                LuaTable returnVal = (LuaTable)translator.GetObject(_L, -1, typeof(LuaTable));
 
-                LuaAPI.lua_settop(L, oldTop);
+                LuaAPI.lua_settop(_L, oldTop);
                 return returnVal;
 #if THREAD_SAFT || HOTFIX_ENABLE
             }
@@ -334,6 +350,9 @@ namespace XLua
 
         public void Dispose()
         {
+            System.GC.Collect();
+            System.GC.WaitForPendingFinalizers();
+
             Dispose(true);
 
             System.GC.Collect();
@@ -349,6 +368,11 @@ namespace XLua
                 if (disposed) return;
                 Tick();
 
+                if (!translator.AllDelegateBridgeReleased())
+                {
+                    throw new InvalidOperationException("try to dispose a LuaEnv with C# callback!");
+                }
+
                 LuaAPI.lua_close(L);
 
                 ObjectTranslatorPool.Instance.Remove(L);
@@ -357,7 +381,7 @@ namespace XLua
                     translator = null;
                 }
 
-                L = IntPtr.Zero;
+                rawL = IntPtr.Zero;
 
                 disposed = true;
 #if THREAD_SAFT || HOTFIX_ENABLE
@@ -480,6 +504,7 @@ namespace XLua
             end
 
             xlua.hotfix = function(cs, field, func)
+                if func == nil then func = false end
                 local tbl = (type(field) == 'table') and field or {[field] = func}
                 for k, v in pairs(tbl) do
                     local cflag = ''
@@ -487,10 +512,11 @@ namespace XLua
                         cflag = '_c'
                         k = 'ctor'
                     end
-                    xlua.access(cs, cflag .. '__Hitfix0_'..k, v) -- at least one
+                    local f = type(v) == 'function' and v or nil
+                    xlua.access(cs, cflag .. '__Hitfix0_'..k, f) -- at least one
                     pcall(function()
                         for i = 1, 99 do
-                            xlua.access(cs, '__Hitfix'..i..'_'..k, v)
+                            xlua.access(cs, '__Hitfix'..i..'_'..k, f)
                         end
                     end)
                 end
